--- a/Thresholdin.ipynb
+++ b/Thresholdin.ipynb
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Define max value and min value for 8-bit grayscale Image.__\n",
+    "_Define max value and min value for 8-bit grayscale Image._\n",
     "\n",
     "\n",
     "We have an 8-bit grayscale image. Let's define max_value and min_value. \n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
     "# Displaying the thresholded image\n",
     "plt.imshow(image_after_optimal_threshold, cmap='gray')\n",
     "plt.title(f\"Optimal Threshold: {optimal_threshold}\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
