--- a/Homogeneous_coordinates.ipynb
+++ b/Homogeneous_coordinates.ipynb
@@ -142,7 +142,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Task 2:** \n",
     "Create function `homogeneous_to_cartesian()`. Here, we need to just remove the extra element from the given homogeneous coordinate system.\n",
     "\n",
     "Hint: \n",
@@ -245,8 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Task 1:** <a name=\"exercise-2-task-1\"></a>\n",
-    "In this task, we create a function to calculate the rotation matrix. \n",
+    "Here, we create a function to calculate the rotation matrix. \n",
     "\n",
     "___Hint:___\n",
     "\n",
@@ -457,8 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Task 2:** <a name=\"exercise-2-task-2\"></a>\n",
-    "In this task, we create a function to perform the action of rotation. \n",
+    "Here, we create a function to perform the action of rotation. \n",
     "\n",
     "***Step 1:***  Convert the given coordinates points to homogeneous coordinate system\n",
     "\n",
