--- a/Denoising.ipynb
+++ b/Denoising.ipynb
@@ -293,7 +293,7 @@
     "## Adding salt and pepper noise\n",
     "\n",
     "---\n",
-    "In this exercise, you are going to write code such that the function returns image with salt and pepper noise. The function takes image and prob as parameter. 'prob' basically defines the probabilty of salt and pepper noise."
+    "Here, we are going to write code such that the function returns image with salt and pepper noise. The function takes image and prob as parameter. 'prob' basically defines the probabilty of salt and pepper noise."
    ]
   },
   {
@@ -377,7 +377,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Removing the noise on the image using Gaussian blur and Median blur**"
+    "# Removing the noise on the image using Gaussian blur and Median blur\n",
+    "We are going to use both gaussian blur and median blur to remove the noise on the image and see which one does better. Use sigmaX and sigmaY as $0.8$ value, kernel of $(5,5)$ and for median blur use kernel of size $5$."
    ]
   },
   {
