--- a/Denoising.ipynb
+++ b/Denoising.ipynb
@@ -404,6 +404,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us visualize the effect of gaussian blur and motion blur."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
