--- a/Thresholdin.ipynb
+++ b/Thresholdin.ipynb
@@ -455,12 +455,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimal_threshold = int(optimal_threshold)\n",
-    "\n",
+    "optimal_threshold = int(optimal_threshold)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply five types of binary threshold on the median blurred Image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Applying different thresholding techniques\n",
     "th_bin, THRESH_BINARY = cv2.threshold(blured_gray_image, optimal_threshold, 255, cv2.THRESH_BINARY)\n",
     "th_bin_inv, THRESH_BINARY_INV = cv2.threshold(blured_gray_image, optimal_threshold, 255, cv2.THRESH_BINARY_INV)\n",
