--- a/Thresholdin.ipynb
+++ b/Thresholdin.ipynb
@@ -582,6 +582,27 @@
     "plt.title('Adaptive Thresholding')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program Executed in 637.5945406999999 Seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "### To time the execution\n",
+    "import timeit\n",
+    "stop = timeit.default_timer()\n",
+    "execution_time = stop - start\n",
+    "print(\"Program Executed in {} Seconds.\".format(execution_time))"
+   ]
   }
  ],
  "metadata": {
